--- a/app/globals.css
+++ b/app/globals.css
@@ -12,26 +12,28 @@
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .box {
-	-ms-overflow-style: none; /* IE and Edge */
-	scrollbar-width: none; /* Firefox */
+	-ms-overflow-style: none;
+	/* IE and Edge */
+	scrollbar-width: none;
+	/* Firefox */
 }
 
 .App {
 	text-align: center;
-  }
-  
-  .App-logo {
+}
+
+.App-logo {
 	height: 40vmin;
 	pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
+}
+
+@media (prefers-reduced-motion: no-preference) {
 	.App-logo {
-	  animation: App-logo-spin infinite 20s linear;
+		animation: App-logo-spin infinite 20s linear;
 	}
-  }
-  
-  .App-header {
+}
+
+.App-header {
 	background-color: #000;
 	min-height: 100vh;
 	display: flex;
@@ -40,18 +42,73 @@
 	justify-content: center;
 	font-size: calc(10px + 2vmin);
 	color: white;
-  }
-  
-  .App-link {
+}
+
+.App-link {
 	color: #61dafb;
-  }
-  
-  @keyframes App-logo-spin {
+}
+
+@keyframes App-logo-spin {
 	from {
-	  transform: rotate(0deg);
+		transform: rotate(0deg);
 	}
+
 	to {
-	  transform: rotate(360deg);
+		transform: rotate(360deg);
 	}
-  }
-  
+}
+
+/*--- Keyboard styles ---*/
+
+.key {
+	outline: none;
+	border: none;
+	display: flex;
+	justify-content: center;
+	background-color: transparent;
+}
+
+.key span {
+	cursor: pointer;
+	position: relative;
+	height: 80px;
+	width: 100px;
+	padding: 8px 15px;
+	margin: 8px 4px;
+	display: inline-block;
+	border-radius: 10px;
+	background: linear-gradient(180deg, #282828, #202020);
+	box-shadow: inset -8px 0 8px rgba(0, 0, 0, 0.15),
+		inset 0 -8px 8px rgba(0, 0, 0, 0.25), 0 0 0 2px rgba(0, 0, 0, 0.75),
+		10px 20px 25px rgba(0, 0, 0, 0.4);
+	overflow: hidden;
+}
+
+.key div:first-child {
+	width: 120px;
+}
+
+.key span::before {
+	content: "";
+	position: absolute;
+	top: 3px;
+	left: 4px;
+	bottom: 14px;
+	right: 12px;
+	background: linear-gradient(90deg, #232323, #4a4a4a);
+	border-radius: 10px;
+	box-shadow: -10px -10px 10px rgba(255, 255, 255, 0.25),
+		10px 5px 10px rgba(0, 0, 0, 0.15);
+	border-left: 1px solid #0004;
+	border-bottom: 1px solid #0004;
+	border-top: 1px solid #0009;
+}
+
+.key span i {
+	font-family: "Montserrat", sans-serif;
+	position: relative;
+	font-style: normal;
+	font-size: 1.5rem;
+	text-transform: uppercase;
+	color: white;
+}
